css/demos.css
body {
	background-color: #C3D3E4;
}

#description {
	margin-left:auto; 
	margin-right:auto; 
	width:700px;
	font: 20px arial; 
	color: rgb(64, 64, 64);
	text-align: center;
}

#container {
	text-align: center;
}

#watermark {
	margin-top: -210px;
	margin-left:auto; 
	margin-right:auto; 
	width:90%; 
	font: italic 60px arial; 
	color: rgb(64, 64, 64);
	opacity: 0.1;
}

.code {
	margin-bottom: 10px;
}

